@@ -1,3 +1,9 @@
+Alex Tutubalin <lexa@lexa.ru>
+Secunia #76000:
+ * Fixed fuji_width handling if file is neither fuji nor DNG
+ * Fixed xtrans interpolate for broken xtrans pattern
+ * Fixed panasonic decoder
+
 2017-08-12  Alex Tutubalin <lexa@lexa.ru>
  * 0.19-Snapshot-20170812
  * Camera support (984 total):
